# workshop-etl-com-duckdb-e-python

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  criando_dados.py  pipeline.py  pipeline_aprimorado.py  primeiro_pipeline.py  pyproject.toml  segundo_pipeline.py
json_files/: data_1.json  data_3.json  data_4.json  data_5.json
parquet_files/: data_1.parquet  data_2.parquet  data_3.parquet
pasta_gdown/: alunos_1.csv  alunos_2.csv  alunos_3.csv  alunos_4.csv  alunos_5.csv  data_2.json  data_4.parquet  data_5.parquet
